--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -134,10 +134,10 @@
 							<li>Ford-Fulkerson</li>
 							<li>Duality</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/07-flows-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>KT 7.1-7.2</td>
-		      <td><strong>HW2 Due</strong> <br/><br/> HW3 Out <br/>[pdf] [tex]</td>
+		      <td><strong>HW2 Due</strong> <br/><br/> HW3 Out <br/><a href="hw/hw3.pdf">[pdf]</a> <a href="hw/hw3.tex">[tex]</a></td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 09/30/25</td>
