--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -121,7 +121,7 @@
 							<li>Knapsack</li>
 							<li>Shortest Paths</li>
 						</ul>
-						<a href="slides/06-knapsack-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/06-knapsack-before.pdf">[slides before]</a> <a href="slides/06-knapsack-after.pdf">[slides after]</a>
 					</td>
 					<td>KT 6.4, 6.8-6.9</td>
 		      <td>&mdash;</td>
@@ -134,7 +134,7 @@
 							<li>Ford-Fulkerson</li>
 							<li>Duality</li>
 						</ul>
-						<a href="slides/07-flows-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/07-flows-before.pdf">[slides before]</a> <a href="slides/07-flows-after.pdf">[slides after]</a>
 					</td>
 					<td>KT 7.1-7.2</td>
 		      <td><strong>HW2 Due</strong> <br/><br/> HW3 Out <br/><a href="hw/hw3.pdf">[pdf]</a>  <a href="hw/hw3.tex">[tex]</a></td>
