--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -151,19 +151,19 @@
 					<td>E 10.6</td>
 		      <td>&mdash;</td>
 		    </tr>
-		    <tr>
-		      <td>Fri<br/> 10/02/25</td>
+			<tr>
+		      <td>Fri<br/> 10/03/25</td>
 		      <td>
-						<strong>Class 9: Flow Applications</strong><br/>
+						<strong>Class 9: Linear Programming I</strong><br/>
 						<ul>
-							<li>Maximum Matching</li>
-							<li>Image Segmentation</li>
+							<li>Basic Concepts</li>
+							<li>Simplex Algorithm</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/09-linprog-after.pdf">[slides after]</a>
 					</td>
-					<td>KT 7.5, 7.10</td>
-		      <td><strong>HW3 Due</strong></td>
-		    </tr>
+					<td>W <a href="slides/lp-notes-I.pdf">I</a></td>
+		      <td>&mdash;</td>
+			</tr>
 		    <tr>
 		      <td>Tue<br/> 10/07/25</td>
 		      <td>
@@ -173,22 +173,9 @@
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
-		      <td>Fri<br/> 10/10/25</td>
+		      <td>Tue<br/> 10/10/22</td>
 		      <td>
-						<strong>Class 11: Linear Programming I</strong><br/>
-						<ul>
-							<li>Basic Concepts</li>
-							<li>Simplex Algorithm</li>
-						</ul>
-						[slides before] [slides after]
-					</td>
-					<td>W <a href="slides/lp-notes-I.pdf">I</a></td>
-		      <td>&mdash;</td>
-		    </tr>
-		    <tr>
-		      <td>Tue<br/> 10/14/22</td>
-		      <td>
-						<strong>Class 12: Linear Programming II</strong><br/>
+						<strong>Class 11: Linear Programming II</strong><br/>
 						<ul>
 							<li>Duality</li>
 							<li>Ellipsoid Algorithm</li>
@@ -196,6 +183,19 @@
 						[slides before] [slides after]
 					</td>
 					<td>W <a href="slides/lp-notes-II.pdf">II</a>, <a href="slides/lp-notes-III.pdf">III</a></td>
+		      <td>&mdash;</td>
+		    </tr>
+			<tr>
+		      <td>Fri<br/> 10/14/25</td>
+		      <td>
+						<strong>Class 12: Flow Applications</strong><br/>
+						<ul>
+							<li>Maximum Matching</li>
+							<li>Image Segmentation</li>
+						</ul>
+						[slides before] [slides after]
+					</td>
+					<td>W <a href="slides/lp-notes-I.pdf">I</a></td>
 		      <td>&mdash;</td>
 		    </tr>
 		    <!--<tr>
