--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -146,7 +146,7 @@
 						<ul>
 							<li>Choosing Good Paths</li>
 						</ul>
-						<a href="slides/08-aug-paths-before.pdf">[slides before]</a> <a href="slides/08-aug-paths-after.pdf>[slides after]</a>
+						<a href="slides/08-aug-paths-before.pdf">[slides before]</a> <a href="slides/08-aug-paths-after.pdf">[slides after]</a>
 					</td>
 					<td>E 10.6</td>
 		      <td>&mdash;</td>
