--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -157,12 +157,11 @@
 						<strong>Class 9: Linear Programming I</strong><br/>
 						<ul>
 							<li>Basic Concepts</li>
-							<li>Simplex Algorithm</li>
 						</ul>
 						<a href="slides/09-linprog-after.pdf">[slides after]</a>
 					</td>
 					<td>W <a href="slides/lp-notes-I.pdf">I</a></td>
-		      <td>&mdash;</td>
+		      <td><strong>HW3 Due</strong></td>
 			</tr>
 		    <tr>
 		      <td>Tue<br/> 10/07/25</td>
@@ -173,40 +172,45 @@
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
-		      <td>Tue<br/> 10/10/22</td>
+		      <td>Fri<br/> 10/10/22</td>
 		      <td>
 						<strong>Class 11: Linear Programming II</strong><br/>
 						<ul>
 							<li>Duality</li>
-							<li>Ellipsoid Algorithm</li>
+							<li>Minmax Theorem</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/10-duality-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>W <a href="slides/lp-notes-II.pdf">II</a>, <a href="slides/lp-notes-III.pdf">III</a></td>
 		      <td>&mdash;</td>
 		    </tr>
 			<tr>
-		      <td>Fri<br/> 10/14/25</td>
+		      <td>Tue<br/> 10/14/25</td>
 		      <td>
-						<strong>Class 12: Flow Applications</strong><br/>
+						<strong>Class 12: Linear Programming III</strong><br/>
+						<ul>
+							<li>Algorithms: Simplex and Ellipsoid</li>
+							<li>Start Reductions</li>
+						</ul>
+						[slides before] [slides after]
+					</td>
+					<td>&mdash;</td>
+		      <td>&mdash;</td>
+		    </tr>
+		    <tr>
+		      <td>Fri<br/> 10/17/25</td>
+		      <td>
+						<strong>Class 13: Applications of Network Flow</strong><br/>
 						<ul>
 							<li>Maximum Matching</li>
 							<li>Image Segmentation</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
-					<td>W <a href="slides/lp-notes-I.pdf">I</a></td>
-		      <td>&mdash;</td>
+					<td>&mdash;</td>
+		      <td>HW4 Out</br>[pdf] [tex]</td>
 		    </tr>
 		    <!--<tr>
-		      <td>Fri<br/> 10/17/25</td>
-		      <td>
-						<strong>Class 13: TBD</strong><br/>
-					</td>
-					<td>&mdash;</td>
-		      <td>&mdash;</td>
-		    </tr>
-		    <tr>
 		      <td>Tue<br/> 10/21/25</td>
 		      <td>
 						<strong>Class 14: TBD</strong><br/>
