--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -208,7 +208,7 @@
 						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
-		      <td>HW4 Out</br>[pdf] [tex]</td>
+		      <td>HW4 Out</br><a href="hw/hw4.pdf">[pdf]</a> <a href="hw/hw4.tex">[tex]</a></td>
 		    </tr>
 		    <!--<tr>
 		      <td>Tue<br/> 10/21/25</td>
