--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -205,10 +205,10 @@
 							<li>Maximum Matching</li>
 							<li>Image Segmentation</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/12-flow-applications-before.pdf">[slides before]</a> [slides after]
 					</td>
-					<td>&mdash;</td>
-		      <td>HW4 Out</br><a href="hw/hw4.pdf">[pdf]</a> <a href="hw/hw4.tex">[tex]</a></td>
+					<td>KT 7.5, 7.10</td>
+		     		<td>HW4 Out</br><a href="hw/hw4.pdf">[pdf]</a> <a href="hw/hw4.tex">[tex]</a></td>
 		    </tr>
 		    <!--<tr>
 		      <td>Tue<br/> 10/21/25</td>
