--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -192,7 +192,7 @@
 							<li>Algorithms: Simplex and Ellipsoid</li>
 							<li>Start Reductions</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/11-lp-algos-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
