--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -179,7 +179,7 @@
 							<li>Duality</li>
 							<li>Minmax Theorem</li>
 						</ul>
-						<a href="slides/10-duality-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/10-duality-before.pdf">[slides before]</a> <a href="slides/10-duality-after.pdf">[slides after]</a>
 					</td>
 					<td>W <a href="slides/lp-notes-II.pdf">II</a>, <a href="slides/lp-notes-III.pdf">III</a></td>
 		      <td>&mdash;</td>
