--- a/service.html
+++ b/service.html
@@ -57,20 +57,26 @@
 
 <h4> Program Committee Member / Area Chair (Grouped by Conference) </h4>
 <ul>
-	<li> Senior PC Member, Conference on Learning Theory <strong>(COLT)</strong>: 2025</li>
-	<li> Senior Area Chair, International Conference on Machine Learning <strong>(ICML)</strong>: 2025</li>		
-	<li> PC Member, ACM Symposium on Theory of Computing <strong>(STOC)</strong>: 2015, 2025</li>
-	<li> PC Member, Foundations of Responsible Computing <strong>(FORC)</strong>: 2024</li>
-	<li> PC Member, SIAM Symposium on Discrete Algorithms <strong>(SODA)</strong>: 2018, 2024</li>
-	<li> PC Member, Conference on Learning Theory <strong>(COLT)</strong>: 2023, 2024</li>
-	<li> Area Chair, ACM Conference on Fairness, Accountability, and Transparency <strong>(FAccT)</strong>: 2022</li>
-	<li> Area Chair, AAAI Conference on Artificial Intelligence <strong>(AAAI)</strong>: 2022</li>
-	<li> PC Member, IEEE Symposium on Security &amp; Privacy <strong>(IEEE S&amp;P)</strong>: 2020, 2021</li>
-	<li> PC Member, ACM Conference on Computer and Information Security <strong>(CCS)</strong>: 2020</li>
-	<li> PC Member, Information Theoretic Cryptography Conference <strong>(ITC)</strong>: 2020</li>
-	<li> PC Member, IEEE Symposium on Foundations of Computer Science <strong>(FOCS)</strong>: 2018</li>
-	<li> PC Member, Theory of Cryptography Conference <strong>(TCC)</strong>: 2015, 2016</li>
+	<li> Senior Area Chair, International Conference on Machine Learning <strong>(ICML)</strong> 2026</li>	
+	<li> Senior PC Member, Conference on Learning Theory <strong>(COLT)</strong> 2025</li>
+	<li> Senior Area Chair, International Conference on Machine Learning <strong>(ICML)</strong> 2025</li>		
+	<li> PC Member, ACM Symposium on Theory of Computing <strong>(STOC)</strong> 2025</li>
+	<li> PC Member, Foundations of Responsible Computing <strong>(FORC)</strong> 2024</li>
+	<li> PC Member, SIAM Symposium on Discrete Algorithms <strong>(SODA)</strong> 2024</li>
+	<li> PC Member, Conference on Learning Theory <strong>(COLT)</strong> 2024</li>
+	<li> PC Member, Conference on Learning Theory <strong>(COLT)</strong> 2023</li>
+	<li> Area Chair, ACM Conference on Fairness, Accountability, and Transparency <strong>(FAccT)</strong> 2022</li>
+	<li> Area Chair, AAAI Conference on Artificial Intelligence <strong>(AAAI)</strong> 2022</li>
+	<li> PC Member, IEEE Symposium on Security &amp; Privacy <strong>(IEEE S&amp;P)</strong> 2021</li>
+	<li> PC Member, IEEE Symposium on Security &amp; Privacy <strong>(IEEE S&amp;P)</strong> 2020</li>
+	<li> PC Member, ACM Conference on Computer and Information Security <strong>(CCS)</strong> 2020</li>
+	<li> PC Member, Information Theoretic Cryptography Conference <strong>(ITC)</strong> 2020</li>
+	<li> PC Member, SIAM Symposium on Discrete Algorithms <strong>(SODA)</strong> 2018</li>
+	<li> PC Member, IEEE Symposium on Foundations of Computer Science <strong>(FOCS)</strong> 2018</li>
+	<li> PC Member, Theory of Cryptography Conference <strong>(TCC)</strong> 2016</li>
  	<li> PC Member, ACM Conference on Economics and Computation <strong>(EC)</strong> 2016</li>
+	<li> PC Member, Theory of Cryptography Conference <strong>(TCC)</strong> 2015</li>
+	<li> PC Member, ACM Symposium on Theory of Computing <strong>(STOC)</strong> 2015</li>
 	<li> PC Member, ACM Innovations in Theoretical Computer Science <strong>(ITCS)</strong> 2015</li>
 </ul>
 
