--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -205,23 +205,30 @@
 							<li>Maximum Matching</li>
 							<li>Image Segmentation</li>
 						</ul>
-						<a href="slides/12-flow-applications-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/12-flow-applications-before.pdf">[slides before]</a> <a href="slides/12-flow-applications-after.pdf">[slides after]</a>
 					</td>
 					<td>KT 7.5, 7.10</td>
 		     		<td>HW4 Out</br><a href="hw/hw4.pdf">[pdf]</a> <a href="hw/hw4.tex">[tex]</a></td>
 		    </tr>
-		    <!--<tr>
+		    <tr>
 		      <td>Tue<br/> 10/21/25</td>
 		      <td>
-						<strong>Class 14: TBD</strong><br/>
+						<strong>Class 14: Intractability I</strong><br/>
+						<ul>
+							<li>NP-Completeness
+						</ul>
+						<a href="slides/14-intractability-before.pdf">[slides before]</a> [slides after]
 					</td>
-					<td>&mdash;</td>
+					<td>KT 8.1-8.5</td>
 		      <td>&mdash;</td>
 		    </tr>
 		    <tr>
 		      <td>Fri<br/> 10/24/25</td>
 		      <td>
-						<strong>Class 15: TBD</strong><br/>
+						<strong>Class 15: Intractability II</strong><br/>
+						<ul>
+							<li>More Intractable Problems</li>
+						</ul>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -229,7 +236,7 @@
 		    <tr>
 		      <td>Tue<br/> 10/28/25</td>
 		      <td>
-						<strong>Class 16: TBD</strong><br/>
+						<strong>NO CLASS (Jon Traveling)</strong><br/>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -237,12 +244,12 @@
 		    <tr>
 		      <td>Fri<br/> 10/31/25</td>
 		      <td>
-						<strong>Class 17: TBD</strong><br/>
+						<strong>Class 16: TBD</strong><br/>
 					</td>
 					<td>&mdash;</td>
-		      <td>&mdash;</td>
+		      <td><strong>HW4 Due</strong></td>
 		    </tr>
-		    <tr>
+		    <!--<tr>
 		      <td>Tue<br/> 11/04/25</td>
 		      <td>
 						<strong>Class 18: TBD</strong><br/>
