--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -166,7 +166,7 @@
 		    <tr>
 		      <td>Tue<br/> 10/07/25</td>
 		      <td>
-						<strong>Class 10: Exam I</strong><br/>
+						<span style="color: #ed7d31"><strong>Class 10: Exam I</strong></span><br/>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -227,8 +227,10 @@
 		      <td>
 						<strong>Class 15: Intractability II</strong><br/>
 						<ul>
-							<li>More Intractable Problems</li>
+							<li>Knapsack</li>
+							<li>Hamiltonian Cycle</li>
 						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -244,15 +246,25 @@
 		    <tr>
 		      <td>Fri<br/> 10/31/25</td>
 		      <td>
-						<strong>Class 16: TBD</strong><br/>
+						<strong>Class 16: Approximation I</strong><br/>
+						<ul>
+							<li>Greedy Approximation</li>
+							<li>Knapsack, Max Coverage</li>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
-		      <td><strong>HW4 Due</strong></td>
+		      <td><strong>HW4 Due</strong></br></br>HW5 Out</br>[pdf] [tex]</td>
 		    </tr>
-		    <!--<tr>
+		    <tr>
 		      <td>Tue<br/> 11/04/25</td>
 		      <td>
-						<strong>Class 18: TBD</strong><br/>
+						<strong>Class 17: Approximation II</strong><br/>
+						<ul>
+							<li>LP-Based Approximation</li>
+							<li>Vertex Cover, Set Cover</li>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -260,7 +272,12 @@
 		    <tr>
 		      <td>Fri<br/> 11/07/25</td>
 		      <td>
-						<strong>Class 19: Exam II</strong><br/>
+						<strong>Class 18: Convex Optimization</strong><br/>
+						<ul>
+							<li>Convex Analysis Basics</li>
+							<li>Gradient Descent</li>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -271,12 +288,12 @@
 						<strong>No Class (Veteran's Day)</strong><br/>
 					</td>
 					<td>&mdash;</td>
-		      <td>&mdash;</td>
+		      <td><strong>HW5 Due</strong></td>
 		    </tr>
 		    <tr>
 		      <td>Fri<br/> 11/14/25</td>
 		      <td>
-						<strong>Class 20: TBD</strong><br/>
+						<span style="color: #ed7d31"><strong>Class 19: Exam II</strong></span><br/>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -284,15 +301,23 @@
 		    <tr>
 		      <td>Tue<br/> 11/18/25</td>
 		      <td>
-						<strong>Class 21: TBD</strong><br/>
+						<strong>Class 20: Randomized Algorithms I</strong><br/>
+						<ul>
+							<li>TBD
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
-		      <td>&mdash;</td>
+		      <td>HW6 Out</br>[pdf] [tex]</td>
 		    </tr>
 		    <tr>
 		      <td>Fri<br/> 11/21/25</td>
 		      <td>
-						<strong>Class 22: TBD</strong><br/>
+						<strong>Class 21: Randomized Algorithms II</strong><br/>
+						<ul>
+							<li>TBD
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -300,7 +325,11 @@
 		    <tr>
 		      <td>Tue<br/> 11/25/25</td>
 		      <td>
-						<strong>Class 23: TBD</strong><br/>
+						<strong>Class 22: Randomized Algorithms III</strong><br/>
+						<ul>
+							<li>TBD
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -316,7 +345,11 @@
 		    <tr>
 		      <td>Tue<br/> 12/02/25</td>
 		      <td>
-						<strong>Class 24: TBD</strong><br/>
+						<strong>Class 23: Randomized Algorithms IV</strong><br/>
+						<ul>
+							<li>TBD
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -324,15 +357,23 @@
 		    <tr>
 		      <td>Fri<br/> 12/05/25</td>
 		      <td>
-						<strong>Class 25: TBD</strong><br/>
+						<strong>Class 24: Randomized Algorithms V</strong><br/>
+						<ul>
+							<li>TBD
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
-		      <td>&mdash;</td>
+		      <td><strong>HW6 Due</strong></td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 12/09/25</td>
 		      <td>
-						<strong>Class 26: TBD</strong><br/>
+						<strong>Class 25: No Regret Learning</strong><br/>
+						<ul>
+							<li>Jon's Favorite Algorithm</li>
+						</ul>
+						[slides before] [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -340,11 +381,11 @@
 		    <tr>
 		      <td>Fri<br/> 12/12/25</td>
 		      <td>
-						<strong>Class 27: Exam III</strong><br/>
+						<span style="color: #ed7d31"><strong>Class 26: Exam III</strong></span><br/>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
-		    </tr>-->
+		    </tr>
       </table>
       
 </div>
