--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -217,7 +217,7 @@
 						<ul>
 							<li>NP-Completeness
 						</ul>
-						<a href="slides/14-intractability-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/14-intractability-before.pdf">[slides before]</a> <a href="slides/14-intractability-after.pdf">[slides after]</a>
 					</td>
 					<td>KT 8.1-8.5</td>
 		      <td>&mdash;</td>
