--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -230,7 +230,7 @@
 							<li>Knapsack</li>
 							<li>Hamiltonian Cycle</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/15-knapsack-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -251,7 +251,7 @@
 							<li>Greedy Approximation</li>
 							<li>Knapsack, Max Coverage</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/16-approximation-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td><strong>HW4 Due</strong></br></br>HW5 Out</br>[pdf] [tex]</td>
