--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -254,7 +254,7 @@
 						<a href="slides/16-approximation-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>&mdash;</td>
-		      <td><strong>HW4 Due</strong></br></br>HW5 Out</br>[pdf] [tex]</td>
+		      <td><strong>HW4 Due</strong></br></br>HW5 Out</br><a href="hw/hw5.pdf">[pdf]</a> <a href="hw/hw5.tex">[tex]</a></td>
 		    </tr>
 		    <tr>
 		      <td>Tue<br/> 11/04/25</td>
