--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -251,7 +251,7 @@
 							<li>Greedy Approximation</li>
 							<li>Knapsack, Max Coverage</li>
 						</ul>
-						<a href="slides/16-approximation-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/16-approximation-before.pdf">[slides before]</a> <a href="slides/16-approximation-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td><strong>HW4 Due</strong></br></br>HW5 Out</br><a href="hw/hw5.pdf">[pdf]</a> <a href="hw/hw5.tex">[tex]</a></td>
@@ -264,7 +264,7 @@
 							<li>LP-Based Approximation</li>
 							<li>Vertex Cover, Set Cover</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/17-covering-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -285,7 +285,7 @@
 		    <tr>
 		      <td>Tue<br/> 11/11/25</td>
 		      <td>
-						<strong>No Class (Veteran's Day)</strong><br/>
+						<strong>NO CLASS (Veteran's Day)</strong><br/>
 					</td>
 					<td>&mdash;</td>
 		      <td><strong>HW5 Due</strong></td>
