--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div>
 	<h4>About Me</h4>
 	
-		<p style="color: #ED7D31"><strong>I am planning to actively admit and recruit PhD students and postdocs for Fall 2026! </br> Feel free to reach out with a short note if you have questions for me.</strong></p>
+		<p style="color: #ED7D31"><strong>I am planning to actively admit and recruit PhD students and postdocs for Fall 2026! Feel free to reach out with a short note if you have questions for me.</strong></p>
 	
       
 	  <p>My research centers on the foundations of privacy for machine learning and statistics, in particular differential privacy and its surprising interplay with other topics such as statistical validity, robustness, cryptography, and fairness. My background is in theoretical computer science, but increasingly my work spans machine learning, statistics, cryptography, and cybersecurity.  My research and teaching have been recognized with an NSF CAREER award and the Ruth and Joel Spira Outstanding Teaching Award.</p>
@@ -73,6 +73,7 @@
 	<p>In Fall 2025 I am teaching a <a href="cs7800-f25/index.html">CS 7800: Advanced Algorithms</a>.</p>
 	
 	<ul>
+		<li><span id="date">11-03-2025</span> Huge Kongratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> for defending her thesis!  Konstantina will join Aarhus as a postdoc in January!</li>
 		<li><span id="date">08-30-2025</span> New <a href="https://arxiv.org/abs/2508.19458">paper</a> on the theory of membership-inference attacks!</li>
 		<li><span id="date">07-11-2025</span> Excited for <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> to join TTIC as a research assistant professor in the Fall!</li>
 		<li><span id="date">06-23-2025</span> New <a href="https://arxiv.org/abs/2506.16460">paper</a> on membership-inference attacks in multitask learning!</li>
@@ -85,7 +86,6 @@
 		<li><span id="date">01-21-2025</span> I was <a href="https://www.census.gov/newsroom/press-releases/2024/new-members-csac.html">appointed</a> to the Census Scientific Advisory Committee (CSAC)!
 		<li><span id="date">12-18-2024</span> New <a href="https://arxiv.org/abs/2412.12374">paper</a> on private personalized learning!
 		<li><span id="date">12-10-2024</span> Our <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias-variance tradeoffs in DP was accepted to JASA&mdash;my first stats journal paper!
-		<li><span id="date">11-22-2024</span> We hosted a successful <a href="https://bostondataprivacy.github.io/privacy-day.html">Privacy Day</a> at BU!
 	</ul></div>
 
 	<h4>
