--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -277,7 +277,7 @@
 							<li>Convex Analysis Basics</li>
 							<li>Gradient Descent</li>
 						</ul>
-						[slides before] [slides after]
+						[slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -303,7 +303,8 @@
 		      <td>
 						<strong>Class 20: Randomized Algorithms I</strong><br/>
 						<ul>
-							<li>TBD
+							<li>Probability Review</li>
+							<li>Balls and Bins</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
@@ -315,7 +316,8 @@
 		      <td>
 						<strong>Class 21: Randomized Algorithms II</strong><br/>
 						<ul>
-							<li>TBD
+							<li>Hash Tables</li>
+							<li>Universal Hash Functions</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
@@ -327,7 +329,7 @@
 		      <td>
 						<strong>Class 22: Randomized Algorithms III</strong><br/>
 						<ul>
-							<li>TBD
+							<li>String Matching</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
