--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -277,7 +277,7 @@
 							<li>Convex Analysis Basics</li>
 							<li>Gradient Descent</li>
 						</ul>
-						[slides after]
+						<a href="slides/18-gd-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
