--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -306,7 +306,7 @@
 							<li>Probability Review</li>
 							<li>Balls and Bins</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/20-slides-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>HW6 Out</br>[pdf] [tex]</td>
