--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -306,7 +306,7 @@
 							<li>Probability Review</li>
 							<li>Balls and Bins</li>
 						</ul>
-						<a href="slides/20-probability-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/20-probability-before.pdf">[slides before]</a> <a href="slides/20-probability-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>HW6 Out</br>[pdf] [tex]</td>
@@ -317,9 +317,9 @@
 						<strong>Class 21: Randomized Algorithms II</strong><br/>
 						<ul>
 							<li>Hash Tables</li>
-							<li>Universal Hash Functions</li>
+							<li>Finish Balls and Bins</li>
 						</ul>
-						[slides before] [slides after]
+						[a href="slides/21-hashing-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -329,6 +329,7 @@
 		      <td>
 						<strong>Class 22: Randomized Algorithms III</strong><br/>
 						<ul>
+							<li>Universal Hashing</li>
 							<li>String Matching</li>
 						</ul>
 						[slides before] [slides after]
@@ -349,7 +350,7 @@
 		      <td>
 						<strong>Class 23: Randomized Algorithms IV</strong><br/>
 						<ul>
-							<li>TBD
+							<li>Global Minimum Cut</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
