--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -319,7 +319,7 @@
 							<li>Hash Tables</li>
 							<li>Finish Balls and Bins</li>
 						</ul>
-						[a href="slides/21-hashing-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/21-hashing-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
