--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -309,7 +309,7 @@
 						<a href="slides/20-probability-before.pdf">[slides before]</a> <a href="slides/20-probability-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
-		      <td>HW6 Out</br>[pdf] [tex]</td>
+		      <td>HW6 Out</br><a href="hw/hw6.pdf">[pdf]</a> <a href="hw/hw6.tex">[tex]</a></td>
 		    </tr>
 		    <tr>
 		      <td>Fri<br/> 11/21/25</td>
