--- a/research.html
+++ b/research.html
@@ -45,6 +45,22 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Online Matrix Factorization, Online Private Query Release, and Online Discrepancy Minimization</strong><br/>
+	<a href="https://www.cs.toronto.edu/~anikolov/">Sasho Nikolov</a>,
+	<a href="">Haohua Tang</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
+	<strong>Efficient and Optimal Learning of Discrete Distributions with Person-Level Privacy</strong><br/>
+	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
+	<a href="https://www.mahbodmajid.com/">Mahbod Majid</a>,
+	<a href="https://people.csail.mit.edu/moitra/">Ankur Moitra</a>,
+	<a href="https://argymouz.github.io/">Argyris Mouzakis</a>,  and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>The Sample Complexity of Membership Inference and Privacy Auditing</strong>
 	<a href="https://arxiv.org/abs/2508.19458"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://mhaghifam.github.io/mahdihaghifam//">Mahdi Haghifam</a>,
