--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -319,7 +319,7 @@
 							<li>Hash Tables</li>
 							<li>Finish Balls and Bins</li>
 						</ul>
-						<a href="slides/21-hashing-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/21-hashing-before.pdf">[slides before]</a> <a href="slides/21-hashing-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -329,8 +329,8 @@
 		      <td>
 						<strong>Class 22: Randomized Algorithms III</strong><br/>
 						<ul>
+							<li>Actually Finish Balls and Bins</li>
 							<li>Universal Hashing</li>
-							<li>String Matching</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
@@ -350,7 +350,7 @@
 		      <td>
 						<strong>Class 23: Randomized Algorithms IV</strong><br/>
 						<ul>
-							<li>Global Minimum Cut</li>
+							<li>String Matching</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
@@ -362,7 +362,7 @@
 		      <td>
 						<strong>Class 24: Randomized Algorithms V</strong><br/>
 						<ul>
-							<li>TBD
+							<li>Global Minimum Cut</li>
 						</ul>
 						[slides before] [slides after]
 					</td>
