--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -332,7 +332,7 @@
 							<li>Actually Finish Balls and Bins</li>
 							<li>Universal Hashing</li>
 						</ul>
-						<a href="slides/22-universal-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/22-universal-before.pdf">[slides before]</a> <a href="slides/22-universal-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -352,7 +352,7 @@
 						<ul>
 							<li>String Matching</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/23-strings-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
