--- a/cs7800-f25/schedule.html
+++ b/cs7800-f25/schedule.html
@@ -353,7 +353,7 @@
 						<ul>
 							<li>String Matching</li>
 						</ul>
-						<a href="slides/23-strings-before.pdf">[slides before]</a> [slides after]
+						<a href="slides/23-strings-before.pdf">[slides before]</a> <a href="slides/23-strings-after.pdf">[slides after]</a>
 					</td>
 					<td>&mdash;</td>
 		      <td>&mdash;</td>
@@ -365,7 +365,7 @@
 						<ul>
 							<li>Global Minimum Cut</li>
 						</ul>
-						[slides before] [slides after]
+						<a href="slides/24-contraction-before.pdf">[slides before]</a> [slides after]
 					</td>
 					<td>&mdash;</td>
 		      <td><strong>HW6 Due</strong></td>
