--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<p>In Fall 2025 I am teaching a <a href="cs7800-f25/index.html">CS 7800: Advanced Algorithms</a>.</p>
 	
 	<ul>
-		<li><span id="date">11-03-2025</span> Huge Kongratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> for defending her thesis!  Konstantina will join Aarhus as a postdoc in January!</li>
+		<li><span id="date">11-03-2025</span> Huge Kongratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> for defending her thesis!  She'll go to Aarhus as a postdoc in February!</li>
 		<li><span id="date">08-30-2025</span> New <a href="https://arxiv.org/abs/2508.19458">paper</a> on the theory of membership-inference attacks!</li>
 		<li><span id="date">07-11-2025</span> Excited for <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> to join TTIC as a research assistant professor in the Fall!</li>
 		<li><span id="date">06-23-2025</span> New <a href="https://arxiv.org/abs/2506.16460">paper</a> on membership-inference attacks in multitask learning!</li>
@@ -93,7 +93,6 @@
 	<h4>Students</h4>
 	<p>I'm fortunate to work with an amazing group of students and postdocs.  Currently I work with:
 	<ul>
-		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
 		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student at CMU, co-advised with Elaine Shi</li>
 	</ul></p>
