--- a/students.html
+++ b/students.html
@@ -45,7 +45,6 @@
 		
 	</ul>
 	<ul>
-		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
 		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student at CMU, co-advised with Elaine Shi</li>
 	</ul>
@@ -60,8 +59,9 @@
 		<li> <a href="https://audramarymcmillan.wixsite.com/mysite"> Audra McMillan</a>, Postdoc 2018&ndash;2020 &rarr; Research Scientist at Apple
 	</ul>
 	<ul>
+		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD 2025 &rarr; Postdoc at Aarhus University</li>
 		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/"> Lydia Zakynthinou</a>, PhD 2023 &rarr; Postdoc at UC Berkeley &rarr; Faculty at Johns Hopkins &nbsp;<span id="date">Facebook Fellow + Khoury PhD Research Award Winner</span>
-		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD 2021 &rarr; Postdoc at University of Waterloo &rarr; Research Associate at OpenDP
+		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD 2021 &rarr; Postdoc at University of Waterloo &rarr; Faculty at University of Copenhagen
 		<li> <a href="http://albertcheu.com/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University &rarr; Research Scientist at Google  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
 	<ul>
