--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 			<div id="mycontact">
 				<strong>Office:</strong> 177 Huntington, Office 616<br/>
-				<strong>Email:</strong> jullman&#64;ccs.neu.edu<br/>	
+				<strong>Email:</strong> j.ullman&#64;northeastern.edu<br/>	
 			</div>
 			
 			<a href="assets/cv.pdf"><img src="img/cv-logo.png" height="40px"></a>
