--- a/research.html
+++ b/research.html
@@ -69,14 +69,6 @@
 </div>
 
 <div class="paper">
-	<strong>Lower Bounds for Public-Private Learning Under Distribution Shift</strong>
-	<a href="https://arxiv.org/abs/2507.17895"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://ars22.github.io/">Amrith Setlur</a>,
-	<a href="https://cs.stanford.edu/~prthaker/">Pratiksha Thaker</a>, and
-	Jonathan Ullman
-</div>
-
-<div class="paper">
 	<strong>Black-Box Privacy Attacks on Shared Representations in Multitask Learning</strong>
 	<a href="https://arxiv.org/abs/2506.16460"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.johnabascal.com/">John Abascal</a>,
@@ -100,6 +92,15 @@
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
 
+<div class="paper">
+	<strong>Lower Bounds for Public-Private Learning Under Distribution Shift</strong>
+	<a href="https://arxiv.org/abs/2507.17895"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://ars22.github.io/">Amrith Setlur</a>,
+	<a href="https://cs.stanford.edu/~prthaker/">Pratiksha Thaker</a>, and
+	Jonathan Ullman</br>
+	International Conference on Artificial Intelligence and Statistics <strong>(AISTATS '26)</strong></br>
+</div>
+	
 <div class="paper">
 	<strong>Privacy in Metalearning and Multitask Learning: Modeling and Separations</strong>
 	<a href="https://arxiv.org/abs/2412.12374"><span id="label-preprint">arXiv</span></a><br/>
