--- a/research.html
+++ b/research.html
@@ -14,9 +14,9 @@
 <body>
 
     <div class="nav">
-					 			<span id="nav-name">Jonathan Ullman</span>
+			<span id="nav-name">Jonathan Ullman</span>
                 <div class="off"><a href="index.html">About</a></div>
-								<div class="on"><a href="research.html">Research</a></div>         
+				<div class="on"><a href="research.html">Research</a></div>         
                 <div class="off"><a href="students.html">Students</a></div>
                 <div class="off"><a href="teaching.html">Teaching</a></div>
                 <div class="off"><a href="service.html">Service</a></div>                                   
@@ -69,18 +69,6 @@
 </div>
 
 <div class="paper">
-	<strong>Black-Box Privacy Attacks on Shared Representations in Multitask Learning</strong>
-	<a href="https://arxiv.org/abs/2506.16460"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="http://www.johnabascal.com/">John Abascal</a>,
-	<a href="">Nicolás Berrios</a>,
-	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
-	Jonathan Ullman,
-	<a href="http://cs-people.bu.edu/ads22/">Adam Smith</a>, and
-	<a href="https://jagielski.github.io/">Matthew Jagielski</a> (contribution order)
-</div>
-
-
-<div class="paper">
 	<strong>Instance-Optimal Differentially Private Estimation</strong>
 	<a href="https://arxiv.org/abs/2210.15819"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://audramarymcmillan.wixsite.com/mysite">Audra McMillan</a>,
@@ -92,6 +80,18 @@
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
 
+<div class="paper">
+	<strong>Black-Box Privacy Attacks on Shared Representations in Multitask Learning</strong>
+	<a href="https://arxiv.org/abs/2506.16460"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="http://www.johnabascal.com/">John Abascal</a>,
+	<a href="">Nicolás Berrios</a>,
+	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
+	Jonathan Ullman,
+	<a href="http://cs-people.bu.edu/ads22/">Adam Smith</a>, and
+	<a href="https://jagielski.github.io/">Matthew Jagielski</a> (contribution order)</br>
+	International Conference on Learning Representations <strong>(ICLR '26)</strong></br>
+</div>
+	
 <div class="paper">
 	<strong>Lower Bounds for Public-Private Learning Under Distribution Shift</strong>
 	<a href="https://arxiv.org/abs/2507.17895"><span id="label-preprint">arXiv</span></a><br/>
