--- a/research.html
+++ b/research.html
@@ -45,13 +45,6 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
-	<strong>Online Matrix Factorization, Online Private Query Release, and Online Discrepancy Minimization</strong><br/>
-	<a href="https://www.cs.toronto.edu/~anikolov/">Sasho Nikolov</a>,
-	<a href="">Haohua Tang</a>, and
-	Jonathan Ullman
-</div>
-
-<div class="paper">
 	<strong>Efficient and Optimal Learning of Discrete Distributions with Person-Level Privacy</strong><br/>
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
 	<a href="https://www.mahbodmajid.com/">Mahbod Majid</a>,
@@ -80,6 +73,14 @@
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
 
+<div class="paper">
+	<strong>Online Matrix Factorization, Online Private Query Release, and Online Discrepancy Minimization</strong><br/>
+	<a href="https://www.cs.toronto.edu/~anikolov/">Sasho Nikolov</a>,
+	<a href="">Haohua Tang</a>, and
+	Jonathan Ullman</br>
+	ACM Symposium on Theory of Computing <strong>(STOC '26)</strong></br>
+</div>
+	
 <div class="paper">
 	<strong>Black-Box Privacy Attacks on Shared Representations in Multitask Learning</strong>
 	<a href="https://arxiv.org/abs/2506.16460"><span id="label-preprint">arXiv</span></a><br/>
