--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 
 	<h4>Current Events</h4>
 	<div id="news">
-	<p>In Fall 2025 I am teaching a <a href="cs7800-f25/index.html">CS 7800: Advanced Algorithms</a>.</p>
+	<p>In Spring 2026 I am teaching a CS 3000: Algorithms & Data.</p>
 	
 	<ul>
+		<li><span id="date">02-01-2026</span> Our paper on online matrix factorization and online privacy was accepted to STOC 2026!  Bother me if we don't get an arXiv version up soon.
 		<li><span id="date">11-03-2025</span> Huge Kongratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> for defending her thesis!  She'll go to Aarhus as a postdoc in February!</li>
 		<li><span id="date">08-30-2025</span> New <a href="https://arxiv.org/abs/2508.19458">paper</a> on the theory of membership-inference attacks!</li>
 		<li><span id="date">07-11-2025</span> Excited for <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> to join TTIC as a research assistant professor in the Fall!</li>
