--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@
 	
 <h2>Teaching</h2>
 	
-<p>I come from a family of teachers, and I have a strong passion for teaching.  For Fall 2025, I am teaching <a href="cs7800-f25/index.html">CS7800: Advanced Algorithms</a>.  You can see what courses I've taught in the past below.</p>
+<p>I come from a family of teachers, and I have a strong passion for teaching.  For Spring 2026, I am teaching CS3000: Algorithms & Data.  You can see what courses I've taught in the past below.</p>
 		
 <h4>Courses at Northeastern</h4>
 	<ul>
@@ -49,6 +49,7 @@
 			<a href="https://dpcourse.github.io/">Spring 2021</a>
 		</li>
 		<li>CS 7800: Advanced Algorithms: 
+			<a href="cs7800-f25/index.html">Fall 2025</a>,
 			<a href="cs7800-f22/index.html">Fall 2022</a>,
 			<a href="https://www.ccs.neu.edu/home/jullman/cs7800f17/syllabus.html">Fall 2017</a>, 
 			<a href="https://www.ccs.neu.edu/home/jullman/cs7800f16/syllabus.html">Fall 2016</a>, 
