--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<p>In Spring 2026 I am teaching a CS 3000: Algorithms & Data.</p>
 	
 	<ul>
-		<li><span id="date">02-01-2026</span> Our paper on online matrix factorization and online privacy was accepted to STOC 2026!  Bother me if we don't get an arXiv version up soon.
+		<li><span id="date">02-01-2026</span> Our paper on online matrix factorization and privacy was accepted to STOC!  Bother me if it's not on arXiv soon.
 		<li><span id="date">11-03-2025</span> Huge Kongratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> for defending her thesis!  She'll go to Aarhus as a postdoc in February!</li>
 		<li><span id="date">08-30-2025</span> New <a href="https://arxiv.org/abs/2508.19458">paper</a> on the theory of membership-inference attacks!</li>
 		<li><span id="date">07-11-2025</span> Excited for <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi</a> to join TTIC as a research assistant professor in the Fall!</li>
