--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 
     <div class="nav">
-					 			<span id="nav-name">Jonathan Ullman</span>
+		<span id="nav-name">Jonathan Ullman</span>
                 <div class="on"><a href="index.html">About</a></div>
-		<div class="off"><a href="research.html">Research</a></div>        
+				<div class="off"><a href="research.html">Research</a></div>        
                 <div class="off"> <a href="students.html">Students</a></div> 
                 <div class="off"><a href="teaching.html">Teaching</a></div>
                 <div class="off"><a href="service.html">Service</a></div>                                   
@@ -40,7 +40,7 @@
 			</div>
 			<div id="mycontact">
 				<strong>Office:</strong> 177 Huntington, Office 616<br/>
-				<strong>Email:</strong> jullman@ccs.neu.edu<br/>	
+				<strong>Email:</strong> j.ullman@northeastern.edu<br/>	
 			</div>
 			
 			<a href="assets/cv.pdf"><img src="img/cv-logo.png" height="40px"></a>
